# VulnCTF-OWASP-Learning-Lab

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  app.py  flag.py  pyproject.toml  secret.txt
docs/: EVIDENCE.md  FUTURE_IMPROVEMENTS.md  LEARNING_NOTES.md  PORTFOLIO_SUMMARY.md  SECURITY_REVIEW.md  THREAT_MODEL.md
screenshots/: .gitkeep
static/: style.css
templates/: challenge.html  command.html  file.html  idor.html  index.html  writeup.html  xss.html
